--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ clap = { version = "4.5.4", features = ["derive"] }
 reqwest = "0.12.4"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
+toml = "0.8.14"
+xdg = "2.5.2"
