--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,13 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 clap = { version = "4.5.4", features = ["derive"] }
-reqwest = "0.12.4"
+console = "0.15.8"
+elasticsearch-dsl = "0.4.21"
+regex = "1.10.5"
+reqwest = { version = "0.12.4", features = [ "blocking", "json" ] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
+smart-default = "0.7.1"
+tabwriter = "1.4.0"
 toml = "0.8.14"
 xdg = "2.5.2"
