--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,23 @@
-[package]
-name = "nw"
+[workspace]
+members = [".", "derive"]
+resolver = "2"
+
+[workspace.package]
 version = "0.1.0"
 edition = "2021"
+authors = ["Po Co"]
+
+[package]
+name = "nw"
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+nw-derive = { path = "./derive" }
+
 anyhow = "1.0.86"
 clap = { version = "4.5.4", features = ["derive"] }
 console = "0.15.8"
@@ -14,7 +26,6 @@ regex = "1.10.5"
 reqwest = { version = "0.12.4", features = [ "blocking", "json" ] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
-smart-default = "0.7.1"
 tabwriter = "1.4.0"
 toml = "0.8.14"
 xdg = "2.5.2"
