--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ regex = "1.10.5"
 reqwest = { version = "0.12.4", features = [ "blocking", "json" ] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
+subprocess = "0.2.9"
 tabwriter = "1.4.0"
 toml = "0.8.14"
 xdg = "2.5.2"
