--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ authors = ["Po Co"]
 anyhow = "1.0.86"
 clap = { version = "4.5.4", features = ["derive"] }
 console = "0.15.8"
+derive_more = "0.99.18"
 elasticsearch-dsl = "0.4.21"
 regex = "1.10.5"
 reqwest = { version = "0.12.4", features = [ "blocking", "json" ] }
