--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ reqwest = { version = "0.12.4", features = [ "blocking", "json" ] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 subprocess = "0.2.9"
-tabwriter = "1.4.0"
+tabled = "0.16.0"
+terminal_size = "0.3.0"
 toml = "0.8.14"
 xdg = "2.5.2"
 
