--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ clap = { version = "4.5.4", features = ["derive"] }
 console = "0.15.8"
 derive_more = { version = "2.0.0", features = ["deref"] }
 elasticsearch-dsl = "0.4.21"
+rayon = "1.10.0"
 regex = "1.10.5"
 reqwest = { version = "0.12.4", features = [ "blocking", "json" ] }
 serde = { version = "1.0.203", features = ["derive"] }
