--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,10 @@ terminal_size = "0.4.0"
 toml = "0.9.5"
 xdg = "3.0.0"
 
+[build-dependencies]
+clap = { version = "4.5.4", features = ["derive"] }
+clap_complete = "4.5.58"
+clap_mangen = "0.2.29"
+
 [features]
 ui = []
